Fixed Catalog product action multi select search label icon alignment issue

--- a/app/design/adminhtml/Magento/backend/web/css/source/actions/_actions-multiselect.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/actions/_actions-multiselect.less
@@ -179,7 +179,7 @@
 .admin__action-multiselect-search-label {
     display: block;
     font-size: 1.5rem;
-    height: 1em;
+    height: 1.3em;
     overflow: hidden;
     position: absolute;
     right: 2.2rem;
